--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,10 +8,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-p5": "^1.3.30",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^2.1.3",
-    "react-table": "^7.8.0",
-    "web-vitals": "^1.0.1"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
