--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "sqlite3": "^5.0.8",
-    "tmi.js": "^1.8.5"
+    "tmi.js": "^1.8.5",
+    "ws": "^8.8.0"
   }
 }
