--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,6 +4,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.8.4",
     "gh-pages": "^4.0.0",
     "react": "^17.0.2",
