--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,7 +11,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-p5": "^1.3.30",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "socket.io-client": "^4.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
